Created models and base auth system

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,14 @@
 PORT=8080
+
+AUTH_TOKEN=
+
+DB_HOST=localhost
+DB_PORT=27017
+DB_DATABASE=lp_blog
+DB_USERNAME=user
+DB_PASSWORD=password
+
+MAIL_HOST=localhost
+MAIL_PORT=1025
+MAIL_USERNAME=
+MAIL_PASSWORD=
