--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "address": "^1.2.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "mongoose": "^7.2.3"
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.2.3",
+    "nodemailer": "^6.9.3"
   },
   "devDependencies": {
     "jest": "^29.5.0",
